--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,9 @@
-# name: Deploy to GitHub Pages
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - name: Checkout
-#       uses: actions/checkout@v4
-
-#     - name: Setup Node.js
-#       uses: actions/setup-node@v4
-#       with:
-#         node-version: '20'
-
-#     - name: Install dependencies
-#       run: npm ci
-
-#     - name: Build
-#       run: npm run build
-
-#     - name: Deploy
-#       uses: JamesIves/github-pages-deploy-action@4.1.4
-#       with:
-#         branch: gh-pages
-#         folder: dist
-
-# permissions:
-#   contents: write
-
 name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # 修改为你使用的分支名，例如 master
+      - main  # 或者根据你的实际分支名称
 
 jobs:
   build-and-deploy:
@@ -51,22 +16,23 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'  # 这里是指定 Node.js 版本
+        node-version: '20'
 
-    - name: Navigate to week-10 directory 📂
-      run: cd week-10  # 切换到 week-10 文件夹
-
-    - name: Install dependencies
-      run: npm install
+    - name: Navigate to week-10 directory and install dependencies
+      run: |
+        cd week-10  # 进入 week-10 目录
+        npm ci  # 安装 week-10 目录中的依赖
 
     - name: Build
-      run: npm run build
+      run: |
+        cd week-10  # 再次确认进入正确目录
+        npm run build  # 构建项目
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
-        branch: gh-pages  # 发布到 GitHub Pages 的分支
-        folder: week-10/dist  # 指定 week-10 文件夹中的 dist 目录进行部署
+        branch: gh-pages  # 发布到 gh-pages 分支
+        folder: week-10/dist  # week-10 文件夹下的 dist 目录
 
 permissions:
   contents: write
