--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # 或者根据你的实际分支名称
+      - main  
+      
 
 jobs:
   build-and-deploy:
@@ -31,8 +32,8 @@ jobs:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
-        branch: gh-pages  # 发布到 gh-pages 分支
-        folder: week-10/dist  # week-10 文件夹下的 dist 目录
+        branch: gh-pages  
+        folder: week-10/dist  
 
 permissions:
   contents: write
